@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 2?
 Core and builtins
 -----------------
 
+- Patch #2426: Added sqlite3.Connection.iterdump method to allow easy dumping
+  of databases.  Contributed by Paul Kippes at PyCon 2008.
+
 - Patch #2477: Added from __future__ import unicode_literals.
 
 - Added backport of bytearray type.
